🚀 JavaScript && TypeScript && Go 🪐

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ ____/ // /__ / /_/ / /_ / /_      / /_____       _  /| | _  /   / /_/ // /_/ /_(
 
         <style type="text/css">
     /* Document */
-    html *
+html *
 {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -359,7 +359,7 @@ html
                         <section data-wlt-nav-state="active">
                             <h2>Helping great companies create seamless customer experiences.</h2>
                             <aside>
-                                <p>Cadence Centricity Claironic Clarity Versus Chaos Clever Clevorvoyant Clockwork Clevor Compel Consensus Contagious Context Convergence Conviction Convinced Copy Counter Clock Wise Customer Advocacy Customer Centricity Delta Orgin Depth Design is content not garish Digital Alchemy Directed Discerning Discoverability is crucial Elastic Electrokinetic propulsion ion wind Evoked Salesforce Customer Portal Application Syndication Resonance</p>
+                                <p>Cadence Centricity Claironic Clarity Versus Chaos Clever Clairvoyant Clockwork Clevor Compel Consensus Contagious Context Convergence Conviction Convinced Copy Counter Clock Wise Customer Advocacy Customer Centricity Delta Orgin Depth Design is content not garish Digital Alchemy Directed Discerning Discoverability is crucial Elastic Electrokinetic propulsion ion wind Evoked Salesforce Customer Portal Application Syndication Resonance</p>
                             </aside>
                         </section>
                         <section>
