--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@ html
     background-image: linear-gradient(to bottom, #f1f1f1 0%,#dcdddd 76%);
 
     min-height: 256px;
+    
+        background: repeating-linear-gradient( 45deg,#242424,#242424 24px, #eec200 24px,#444 48px);
 }
 .sel-drop
 {
