--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ html
 
     min-height: 256px;
     
-        background: repeating-linear-gradient( 45deg,#242424,#242424 24px, #eec200 24px,#444 48px);
+        background: repeating-linear-gradient( 45deg, #fff, #fff 24px, #eec200 24px,#eec200 48px);
 }
 .sel-drop
 {
