🦄 Creative, Business, and Tech ⚡

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ html
 
     min-height: 256px;
     
-        background: repeating-linear-gradient( 45deg, #fff, #fff 24px, #fff699 24px,#fff699 48px);
+        background: repeating-linear-gradient( 45deg, #fff, #fff 24px, #fff6dd 24px,#fff6dd 48px);
 }
 .sel-drop
 {
