🦄 Creative, Business, and Tech ⚡

--- a/index.html
+++ b/index.html
@@ -367,6 +367,16 @@ html
                         <section>
                             <h2>About the Global Production Studio</h2>
                             <aside>
+                                <ul>
+                                    <li>Code quality<br><li>
+
+<li>Maintainable - Easy to read, modify, reason about, change and reuse. BEM naming conventions<li>
+<li>Performant - Fast, above the fold. Does not cause document reflow. Does not require excess HTTP requests<li>
+<li>Secure - Safe from XSS. Does not eval user provided content. No mixed content<li>
+<li>Accessible - Meets applicable WCAG 2.0 Success criteria<li>
+<li>Discoverable - Meets SEO and SMM best practices<li>
+
+                                </ul>
                                 <p>Influencer - Ground Breaker - Early Adopter - Rule Breaker - Inspirer - Visionary - Builder – Activator – Opinion Maker – Innovator – Doer Informative, In-Depth, Indispensable. Ingenuity Insight > Idea > Impact Inspirational Inspire Instant Gratification Integral Interactivity is the Active Ingredient use rich media to entertain or provide interaction. Intriguing Invest in Easy to Use Is anybody out there? It creates a resonance in the mind of the Audience that helps establish mood, feeling, and emotion. It plays with our subconscious in ways that can achieve a connection with the reader deeper then emotioning. James, you ought to discover some day that words have an exact meaning. Kalidascope Keiretsu Knowtify Me Language Leap</p>
                             </aside>
                         </section>
