--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ body::-webkit-scrollbar-thumb
 {
     background: #fed20b;
 }
+aside ul {
+    list-style-type: none;
+}
 a
 {
     outline: none;
@@ -377,12 +380,12 @@ html
 <li>Discoverable - Meets SEO and SMM best practices<li>
 
                                 </ul>
-                                <p>Influencer - Ground Breaker - Early Adopter - Rule Breaker - Inspirer - Visionary - Builder – Activator – Opinion Maker – Innovator – Doer Informative, In-Depth, Indispensable. Ingenuity Insight > Idea > Impact Inspirational Inspire Instant Gratification Integral Interactivity is the Active Ingredient use rich media to entertain or provide interaction. Intriguing Invest in Easy to Use Is anybody out there? It creates a resonance in the mind of the Audience that helps establish mood, feeling, and emotion. It plays with our subconscious in ways that can achieve a connection with the reader deeper then emotioning. James, you ought to discover some day that words have an exact meaning. Kalidascope Keiretsu Knowtify Me Language Leap</p>
                             </aside>
                         </section>
                         <section>
                             <h2>Services | Creative Production | Our Approach</h2>
                             <aside>
+                                <p>Influencer - Ground Breaker - Early Adopter - Rule Breaker - Inspirer - Visionary - Builder – Activator – Opinion Maker – Innovator – Doer Informative, In-Depth, Indispensable. Ingenuity Insight > Idea > Impact Inspirational Inspire Instant Gratification Integral Interactivity is the Active Ingredient use rich media to entertain or provide interaction. Intriguing Invest in Easy to Use Is anybody out there? It creates a resonance in the mind of the Audience that helps establish mood, feeling, and emotion. It plays with our subconscious in ways that can achieve a connection with the reader deeper then emotioning. James, you ought to discover some day that words have an exact meaning. Kalidascope Keiretsu Knowtify Me Language Leap</p>
                                 <p>Lineage Linguistic Liquid Logicable Loyalty Origin Mardi Gras Merchandising Methodical Myoptic Zeal Ninjaneering Opinion Engineering Organic Organized is a way that lets you uncover meaningful trends that you can act upon. Originality Ornate Our product design is a hybrid of ingenuity and simplicity</p>
                             </aside>
                         </section>
