--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ html
                             <h2>About the Global Production Studio</h2>
                             <aside>
                                 <ul>
-                                    <li>Code quality<br><li>
+                                    <li><h3>Code quality</h3><li>
 
 <li>Maintainable - Easy to read, modify, reason about, change and reuse. BEM naming conventions<li>
 <li>Performant - Fast, above the fold. Does not cause document reflow. Does not require excess HTTP requests<li>
