🦄 Creative, Business, and Tech ⚡

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ html
                             </aside>
                         </section>
                         <section>
-                            <h2>Portfoliio</h2>
+                            <h2>Portfolio</h2>
                             <aside>
                                 <p>Positively Post Digital Powerful Precisely Predictive Provements Quantifiable Quincunx Quintessence Rainmaker Rearden metal Refreshest Remarkably Meticulous Respite Lounge Rethink Renew Rejoice Rhythmic Savoir faire Shape Show and Tell Sociotechnical Steadfast Sticky Stradivarius</p>
                             </aside>
