--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ html
 <li>Maintainable - Easy to read, modify, reason about, change and reuse. BEM naming conventions<li>
 <li>Performant - Fast, above the fold. Does not cause document reflow. Does not require excess HTTP requests<li>
 <li>Secure - Safe from XSS. Does not eval user provided content. No mixed content<li>
-<li>Accessible - Meets applicable WCAG 2.0 Success criteria<li>
+<li>Accessible - Meets applicable <a href="https://www.thescottkrause.com/emerging_tech/ecommerce-accessibility-a11y/">WCAG 2.1</a> Success criteria<li>
 <li>Discoverable - Meets SEO and SMM best practices<li>
 
                                 </ul>
