🍰 Accelerometer Web Audio && Vibration 🌴

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ html
                         <section>
                             <h2>Portfolio</h2>
                             <aside>
-                                <p>Positively Post Digital Powerful Precisely Predictive Provements Quantifiable Quincunx Quintessence Rainmaker Rearden metal Refreshest Remarkably Meticulous Respite Lounge Rethink Renew Rejoice Rhythmic Savoir faire Shape Show and Tell Sociotechnical Steadfast Sticky Stradivarius</p>
+                                <p>Positively Post Digital Powerful Precisely Predictive Provements Quantifiable <a href="https://www.thescottkrause.com/emerging_tech/gameification-threejs-webcrypto-accelerator-blender-gltf/">Quincunx 3D</a> Quintessence Rainmaker Rearden metal Refreshest Remarkably Meticulous Respite Lounge Rethink Renew Rejoice Rhythmic Savoir faire Shape Show and Tell Sociotechnical Steadfast Sticky Stradivarius</p>
                             </aside>
                         </section>
                         <section>
