Creative ⚡ Business ⚡ Technical Agility

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ html
                                 <ul>
                                     <li><h3>Code quality</h3><li>
 
-<li>Maintainable - Easy to read, modify, reason about, change and reuse. BEM naming conventions<li>
+<li>Maintainable - Easy to read, modify, <a href="https://thescottkrause.com/emerging_tech/ux-usability-heuristics/">reason about</a>, change and reuse. BEM naming conventions<li>
 <li>Performant - Fast, above the fold. Does not cause document reflow. Does not require excess HTTP requests<li>
 <li>Secure - Safe from XSS. Does not eval user provided content. No mixed content<li>
 <li>Accessible - Meets applicable <a href="https://www.thescottkrause.com/emerging_tech/ecommerce-accessibility-a11y/">WCAG 2.1</a> Success criteria<li>
