Infographics UX PWA Typescript Svelte ThreeJS Vue ✨ htmlx

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ html
                             <h2>Services | Creative Production | Our Approach</h2>
                             <aside>
                                 <p>Influencer - Ground Breaker - Early Adopter - Rule Breaker - Inspirer - Visionary - Builder – Activator – Opinion Maker – Innovator – Doer Informative, In-Depth, Indispensable. Ingenuity Insight > Idea > Impact Inspirational Inspire Instant Gratification Integral Interactivity is the Active Ingredient use rich media to entertain or provide interaction. Intriguing Invest in Easy to Use Is anybody out there? It creates a resonance in the mind of the Audience that helps establish mood, feeling, and emotion. It plays with our subconscious in ways that can achieve a connection with the reader deeper then emotioning. James, you ought to discover some day that words have an exact meaning. Kalidascope Keiretsu Knowtify Me Language Leap</p>
-                                <p>Lineage Linguistic Liquid Logicable Loyalty Origin Mardi Gras Merchandising Methodical Myoptic Zeal Ninjaneering Opinion Engineering Organic Organized is a way that lets you uncover meaningful trends that you can act upon. Originality Ornate Our product design is a hybrid of ingenuity and simplicity</p>
+                                <p>Lineage Linguistic Liquid Logicable Loyalty Origin Mardi Gras Merchandising Methodical Myoptic Zeal Ninjaneering <a href="https://www.thescottkrause.com/emerging_tech/html-form-validation-patterns/">JavaScript FORM Validation patterns</a> Opinion Engineering Organic Organized is a way that lets you uncover meaningful trends that you can act upon. Originality Ornate Our product design is a hybrid of ingenuity and simplicity</p>
                             </aside>
                         </section>
                         <section>
@@ -398,7 +398,7 @@ html
                         <section>
                             <h2>Contact</h2>
                             <aside>
-                                <p>A veritable avalanche actionable aesthetic agile an appropriate application of ingenuity apex architecture aspect assertive authoritative brittle application architecture that's not flexible cannonical cause change circadian rhythms of arousal and rest circumvent clairvoyant cognate cohesion combined to form something greater than the sum of its parts compulsive concept contemporary contrast convection cornerstone credentials credibility criterion critical clarity critical mass customer centricity.</p>
+                                <p>A veritable avalanche actionable aesthetic agile an appropriate application of ingenuity apex architecture aspect assertive authoritative brittle <a href="https://www.thescottkrause.com/emerging_tech/neodigm55_ux_library/">application architecture</a> that's not flexible cannonical cause change circadian rhythms of arousal and rest circumvent clairvoyant cognate cohesion combined to form something greater than the sum of its parts compulsive concept contemporary contrast convection cornerstone credentials credibility criterion critical clarity critical mass customer centricity.</p>
                             </aside>
                         </section>
                     </aside>
