DataVis 👁️ UX 🍭 PWA 👁️ ThreeJS ✨ Vue  🚀 alpine.js 🌶️ htmx

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>🌐 WLT Global Production Studio</title>
+        <title>DataVis 👁️ UX 🍭 PWA 👁️ ThreeJS ✨ Vue  🚀 alpine.js 🌶️ htmx</title>
         <!--
 
 ________           __________     _________      ______ __                                 
